--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>LanguageLift – Learn Languages Smarter</title>
   <link rel="stylesheet" href="styles.css">
 </head>
