--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="hero-image">
-      <img src="C:\Users\Mahrukh-Ali\OneDrive\Documents\GitHub\Assignment-2\assets\image.svg" alt="Language Learning Illustration">
+      <img src="assets\image.svg" alt="Language Learning Illustration">
     </div>
   </section>
 
